[package]
name = "cargo_under_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
byteorder = "*"
bytes = "*"
http = "*"
hyper = "*"
# Versions 1.3.x of indexmap have a "clever" feature that auto-detects whether a
# build is `std` or not, and sets an internal/inaccessible `has_std` flag
# accordingly. Without this flag, indexmap is not back-compatible and things
# fail to build (because the second default type argument to indexmap types are
# no longer provided). Force use of an earlier version of indexmap to avoid
# this.
indexmap = "=1.0.2"
itertools = "*"
lazy_static = "*"
log = { version = "*", features = ["std"] }
prost = "*"
prost-types = "*"
rand = "*"
regex = "1"
simple_logger = "*"
tokio = { version = "*", features = ["rt-core", "macros"] }
# Using an old version that is supported by `cargo-raze`:
# https://github.com/google/cargo-raze/issues/41#issuecomment-592274128
tonic = { version = "=0.1.1", features = ["tls"] }
wasmi = { version = "*", default-features = false, features = ["core"] }
prometheus = { version = "0.8", features = [
  "nightly"
], default-features = false }

[raze]
genmode = "Remote"
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
# The target to generate BUILD rules for.
target = "x86_64-unknown-linux-gnu"

# Turn on proc_macro support in proc-macro2. Used by syn which is used by
# cargo-raze itself; see:
# https://github.com/google/cargo-raze/issues/64#issuecomment-431687016
[raze.crates.proc-macro2.'1.0.10']
additional_flags = [
  "--cfg=use_proc_macro",
  # This flag is necessary to solve problems with nested macro in `async-stream`:
  # https://github.com/project-oak/oak/issues/890#issuecomment-618410736
  "--cfg=wrap_proc_macro",
]

# Set the atomic_cas config when building log, see:
# https://github.com/google/cargo-raze/issues/110
[raze.crates.log.'0.4.8']
additional_flags = ["--cfg=atomic_cas"]

# Add a `data` attribute to the corresponding generated `BUILD` file, since `cargo-raze` does not
# automatically add non-`*.rs` files to the Bazel workspace.
# https://github.com/google/cargo-raze/issues/41
[raze.crates.ring.'0.16.12']
data_attr = "glob([\"**/*.der\"])"

[raze.crates.webpki.'0.21.2']
data_attr = "glob([\"**/*.der\"])"

[workspace]
